--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@
   
   #container {
     display: grid;
-    height: 500px;
-    width: 500px;
+    height: 960px;
+    width: 960px;
   }
   
   .box {
@@ -48,4 +48,40 @@
     border: solid black;
     border-width: 1px;
     /* background-color: white; */
+  }
+
+  /* Input Slider */
+  .slideContainer {
+    width: 100%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
   }
